--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_products">Products</string>
     <string name="title_pickup">Order</string>
     <string name="title_profile">Profile</string>
+    <string name="title_cart">Shopping Cart</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
